[gd_scene load_steps=3 format=3 uid="uid://coxkhpkrb54bi"]

[ext_resource type="Script" path="res://event_editor/nodes/message_node/message_gn_cp.gd" id="1_aqhev"]
[ext_resource type="PackedScene" uid="uid://cwk0uqj7m3sv6" path="res://event_editor/component/dialogue_input.tscn" id="2_33ie4"]

[node name="MessageNodeV2" type="GraphNode" node_paths=PackedStringArray("wait_type_btn", "wait_time_line")]
offset_left = 106.0
offset_top = 213.0
offset_right = 417.0
offset_bottom = 627.0
mouse_filter = 1
position_offset = Vector2(-671, -413)
title = "显示消息V2"
ignore_invalid_connection_type = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 1204
slot/1/right_color = Color(3.08037e-06, 0.672177, 0.652096, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_aqhev")
wait_type_btn = NodePath("VBoxContainer/HSplitContainer/OptionButton")
wait_time_line = NodePath("VBoxContainer/HSplitContainer2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Line1" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 385

[node name="Label" type="Label" parent="VBoxContainer/Line1"]
layout_mode = 2
text = "角色"

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/Line1"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Line1/HSplitContainer"]
layout_mode = 2
text = "空"

[node name="Button" type="Button" parent="VBoxContainer/Line1/HSplitContainer"]
layout_mode = 2
text = "选取"

[node name="HSplitContainer2" type="HSplitContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
split_offset = 385

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer2"]
layout_mode = 2
text = "等待时间（毫秒)"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HSplitContainer2"]
layout_mode = 2
min_value = 1000.0
max_value = 10000.0
step = 100.0
value = 1000.0

[node name="HSplitContainer5" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 385

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer5"]
layout_mode = 2
text = "位置"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HSplitContainer5"]
layout_mode = 2
selected = 2
item_count = 3
popup/item_0/text = "顶部"
popup/item_1/text = "中间"
popup/item_1/id = 1
popup/item_2/text = "底部"
popup/item_2/id = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 385

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
text = "是否等待"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "等待按键"
popup/item_1/text = "自动播放"
popup/item_1/id = 1

[node name="Control" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/Control"]
layout_mode = 2
split_offset = 235

[node name="Label" type="Label" parent="VBoxContainer/Control/HSplitContainer"]
layout_mode = 2
text = "对话数据"

[node name="Button" type="Button" parent="VBoxContainer/Control/HSplitContainer"]
layout_mode = 2
text = "+"

[node name="HBoxContainer" type="HSplitContainer" parent="VBoxContainer/Control"]
layout_mode = 2

[node name="SPACING" type="Control" parent="VBoxContainer/Control/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DialogueInput" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer" instance=ExtResource("2_33ie4")]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HSplitContainer" type="HBoxContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer2/HSplitContainer"]
layout_mode = 2
text = "思考关键词节点"
